--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 
 <div class="container mt-5">    
     <p>Esta es la página principal del informe sobre el "Sistema de ventas de computadoras". Utiliza la barra de navegación para acceder a cada sección del informe.</p>
-    <h2>Introducción</h2>
+    <h3>Resumen</h3>
+    <p>Contenido del resumen</p>
+    <h3>Introducción</h3>
+    <p>Introducción sobre el contenido del sistema</p>
     <h3>Antecedentes</h3>
     <p>Aquí va el contenido sobre los antecedentes...</p>
-
     <h3>Árbol de Problemas</h3>
     <button class="btn btn-primary"><a style="color: black;" href="arbol-de-problemas.html">Diagrama de Arbol de Problemas</a></button>
 </div>
